--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     >
                       <p class="mr-3">Node.js</p>
                       <p class="mr-3">Express.js</p>
-                      <p class="mr-3">React Library</p>
+                      <p class="mr-3">React.js</p>
                       <p class="mr-3">Tailwind css</p>
                       <p class="mr-3">MongoDb</p>
                     </div>
