--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
                     <div
                       class="flex items-center mb-3 sm:mb-0 font-cursive text-theme text-xl"
                     >
-                      <p class="mr-3">Node.js</p>
-                      <p class="mr-3">Express.js</p>
+                      <p class="mr-3">Node,Express.js</p>
                       <p class="mr-3">React.js</p>
                       <p class="mr-3">Tailwind css</p>
                       <p class="mr-3">MongoDb</p>
