--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </a>
             <a
               class="resume-icon bg-yellow-500 hover:bg-green-600 text-white py-2 px-4 rounded inline-block text-center"
-              href="https://drive.google.com/uc?export=download&id=1HwyBTgKwyAsCbawbqsTMJsoAkJgC9eU0"
+              href="https://drive.google.com/file/d/1Yu0WneI-f9rUWqow0-RlOVvdXuB8L3y2/view?usp=sharing"
               download="Pratik_Raj_Resume.pdf"
             >
               <span>Resume</span>
