--- a/index.html
+++ b/index.html
@@ -352,38 +352,24 @@
                 >Let's Connect<span class="text-theme text-black">.</span></span
               >
             </h1>
-            <div
-                class="bg-gray-100 p-4 rounded-md shadow-lg text-gray-600 max-w-lg mt-8 ml-16"
-              >
-                <h2 class="text-3xl font-bold mb-2">Contact me</h2>
-                <p class="mb-2">
-                  <strong>Mobile:</strong>
-                  <a href="Mob:+91 9062144984">9062144984</a>
-                </p>
-                <p class="mb-2">
-                  <strong>Email:</strong>
-                  <a href="mailto:kpratik071997@gmail.com"
-                    >kpratik071997@gmail.com</a
-                  >
-                </p>
-              </div>
-            <form id="contact-form" class="flex flex-col w-full max-w-sm mx-auto">
+            
+            <form id="contact-form" class="flex flex-col w-full ">
               <input
                 name="name"
                 placeholder="Name"
                 type="text"
-                class="bg-gray-600 mb-1 p-2 rounded-sm text-white  h-8 w-full"
+                class="bg-gray-600 mb-1 p-2 rounded-sm text-white "
                 required
               />
               <input
                 placeholder="Enter email"
                 type="text"
                 name="email"
-                class="bg-gray-600 mb-1 p-2 rounded-sm text-white  h-8 w-full"
+                class="bg-gray-600 mb-1 p-2 rounded-sm text-white"
                 required
               />
               <textarea
-                class="bg-gray-600 p-2 pb-10 rounded-sm text-white  h-8 w-full"
+                class="bg-gray-600 p-2 pb-10 rounded-sm text-white"
                 placeholder="Enter your message"
                 type="text"
                 name="message"
